--- a/style.css
+++ b/style.css
@@ -96,6 +96,183 @@ body {
 
 }
 
+/*--- Simon game board ---*/
+
+#board {
+    position: relative;
+    width: 600px;
+    height: 600px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1em;
+}
+
+.color {
+    width: 300px;
+    height: 300px;
+    cursor: pointer;
+    pointer-events: none;
+}
+
+#green {
+    background-color: green;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    border-radius: 100% 0 0 0;
+}
+
+#green:active {
+    background: radial-gradient(ellipse at center, #d2ff52 0%, #91e842 100%);
+    box-shadow: inset 0 0 30px #000000;
+}
+
+#red {
+    background: red;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    border-radius: 0 100% 0 0;
+}
+
+#red:active {
+    background: radial-gradient(ellipse at center, #ff1a00 0%, #ff1a00 100%);
+    box-shadow: inset 0 0 30px #000000;
+}
+
+#blue {
+    background-color: blue;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    border-radius: 0 0 0 100%;
+}
+
+#blue:active {
+    background: radial-gradient(ellipse at center, #499bea 0%, #207ce5 100%);
+    box-shadow: inset 0 0 30px #000000;
+}
+
+#yellow {
+    background-color: #ffcc00;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    border-radius: 0 0 100% 0;  
+}
+
+#yellow:active {
+    background: radial-gradient(ellipse at center, #ffff88 0%, #ffff88 100%);
+    box-shadow: inset 0 0 30px #000000;
+}
+
+.button {
+    width: 25px;
+    height: 25px;
+    border: solid 2px black;
+    border-radius: 100%;
+    box-shadow: inset 0 0 2px #000000;
+    font-size: 3em;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+
+#start {
+    background-color: red;
+}
+
+.button:active {
+    box-shadow: inset 0 0 5px #000000;
+}
+
+#reset {
+    background-color: yellow;
+}
+
+button:focus {
+    outline: none;
+}
+
+.greenClicked {
+    background: radial-gradient(ellipse at center, #d2ff52 0%, #91e842 100%);
+    box-shadow: inset 0 0 30px #000000;
+  }
+  
+  .redClicked {
+    background: radial-gradient(ellipse at center, #ff1a00 0%, #ff1a00 100%);
+    box-shadow: inset 0 0 30px #000000;
+  }
+  
+  .blueClicked {
+    background: radial-gradient(ellipse at center, #499bea 0%, #207ce5 100%);
+    box-shadow: inset 0 0 30px #000000;
+  }
+  
+  .yellowClicked {
+    background: radial-gradient(ellipse at center, #ffff88 0%, #ffff88 100%);
+    box-shadow: inset 0 0 30px #000000;
+  }
+
+  #center-board {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 300px;
+      height: 300px;
+      left: 25%;
+      top: 25%;
+      border-radius: 100%;
+      border: solid 1em;
+      box-sizing: border-box;
+      background: silver;
+  }
+
+  .row {
+      display: flex;
+      width: 55%;
+      justify-content: space-between;
+      padding: 3% 0;
+  }
+
+  .button-tag {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
+
+  .score {
+      color: lightgreen;
+      background-color: black;
+      padding: 5px 5px 5px 10px;
+      margin-bottom: 10px;
+      font-size: 24px;
+      letter-spacing: 5px;
+      display: flex;
+      justify-content: center;
+  }
+
+  .start {
+    background: radial-gradient(ellipse at center, white 0%, white 100%);
+    box-shadow: inset 0 0 0 #000000;
+  }
+
+  .success {
+      filter: drop-shadow(0 0 80px green);
+  }
+
+  .failure {
+      filter: drop-shadow(0 0 80px red);
+  }
+
+  img {
+      width: 200px;
+  }
+
+  
+
+
+
+
+
 /*--- 3 colums ---*/
 
 .features {
