--- a/style.css
+++ b/style.css
@@ -1,28 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto+Mono&display=swap');
+
+html {
+    scroll-behavior: smooth;
+  }
 
 body {
     padding: 0;
     margin: 0;
     height: 100%;
-    width: 100%;
     justify-content: center;
     align-items: center;
     margin: auto;
-    font-family: 'Press Start 2P', cursive;
-    font-size: 20px; 
     margin-top: 30px;
-    background-color: #060606;
+    background-color: #0F0C24;
     text-align: center;
+    font-family: 'Roboto Mono', monospace;
 }
 
-h1, h2, h3 {
-    color: lightseagreen;
+h1, h2, h3, h4 {
+    color: #fdc40f ;
+    font-family: 'Press Start 2P', cursive;
 }
 
   /*--- Navigation bar ---*/
 
   .navbar {
-    background:#060606;
+    background:#A350A3;
   }
   .nav-link,
   .navbar-brand {
@@ -46,6 +49,15 @@ h1, h2, h3 {
     background-size: cover;
     background-position: center;
     position: relative;
+  }
+
+  .overlay {
+    position: absolute;
+    min-height: 100%;
+    min-width: 100%;
+    left: 0;
+    top: 0;
+    background: rgba(0, 0, 0, 0.4);
   }
 
   .description {
@@ -77,7 +89,7 @@ h1, h2, h3 {
     width: 400px;
     height: 300px;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 img {
@@ -100,29 +112,29 @@ img {
 }
 
 input#strict.toggle {
-    margin-left: 91px;
+    margin-left: 71px;
 }
 
 input#on.toggle {
-    margin-left: 18px;
+    margin-left: 25px;
 }
 
 .button {
-    font-size: 1.1em;
+    font-size: 1.5em;
     background-color: lightgrey;
     margin-top: 25px;
 }
 
 #switches {
     position: absolute;
-    margin-left: 26px;
+    margin-left: 34px;
 }
 
 .text1 {
     position: absolute;
-    margin-left: 16px;
+    margin-left: 43px;
     margin-top: 55px;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .text1 span:last-child {
@@ -131,7 +143,7 @@ input#on.toggle {
 
 .text2 {
     position: absolute;
-    margin-left: 78px;
+    margin-left: 93px;
     margin-top: 133px;
     font-size: 14px;
 }
@@ -144,7 +156,7 @@ input#on.toggle {
     font-size: 20px;
     height: 30px;
     width: 50px;
-    margin-left: 88px;
+    margin-left: 90px;
     margin-top: 100px;
     text-align: center;
     vertical-align: middle;
