--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ h1, h2, h3, h4 {
     font-family: 'Press Start 2P', cursive;
 }
 
+h2 {
+  margin-top: 50px;
+}
+
   /*--- Navigation bar ---*/
 
   .navbar {
@@ -329,33 +333,6 @@ h1, h2, h3, h4 {
   display: none;
 }
 
-.information {
-  color: white;
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  min-height: 600px;
-  line-height: 1.2;
-  text-align: justify;
-}
-
-.information h2 {
-  font-size: 3.1em;
-  padding-bottom: 5%;
-  text-shadow: 0.5px 0.5px grey;
-}
-
-.information li {
-  font-size: 1.3em;
-  padding: 2% 0;
-  text-shadow: 0.5px 0.5px grey;
-}
-
-.information ol {
-  list-style: decimal;
-}
-
 @keyframes colors {
   0% {
     background: #c30000;
@@ -371,120 +348,41 @@ h1, h2, h3, h4 {
   }
 }
 
-@media (max-width: 450px) {
-  body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .main {
-    height: 90%;
-  }
-  .information {
-    display: none;
-  }
-  #board {
-    width: 90vw;
-    height: 100%;
-    grid-gap: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  #board .color {
-    width: 100%;
-    height: 120px;
-    border-radius: 0;
-  }
-  #center-board {
-    position: static;
-    width: 100%;
-    border-radius: 0;
-    border: none;
-  }
-  .button {
-    width: 50px;
-    height: 50px;
-    margin-bottom: 5px;
-  }
-  .button-tag p {
-    font-size: 1em;
-  }
-}
 
-@media (min-width: 575.98px) and (max-width: 825px) {
-  .information {
-    display: none;
-  }
-  #board {
-    width: 90vw;
-    height: 90vh;
-    grid-gap: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  #board .color {
-    width: 100%;
-    height: 100%;
-    border-radius: 0;
-  }
-  #center-board {
-    position: static;
-    width: 100%;
-    height: 100%;
-    border-radius: 0;
-    border: none;
-  }
-  .button {
-    width: 50px;
-    height: 50px;
-    margin-bottom: 5px;
-  }
-  .button-tag p {
-    font-size: 1em;
-  }
-  .row {
-    width: 70%;
-  }
-  .success {
-    filter: drop-shadow(0 0 100px green);
-  }
-  .failure {
-    filter: drop-shadow(0 0 100px red);
-  }
-}
-
-@media (min-width: 751px) and (max-width: 1000px) {
-  .information {
-    display: none;
-  }
-}
 
 /*--- 3 colums information ---*/
 
 .features {
-    margin: 4em auto;
-    padding: 1em;
-    position: relative;
-    text-align: left;
-  }
-  .feature-title {
-    color: #333;
-    font-size: 1.3rem;
-    font-weight: 700;
-    margin-bottom: 20px;
-    text-transform: uppercase;
-  }
-  .features img {
-    -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
-    -moz-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
-    margin-bottom: 16px;
-  }
+  margin: 4em auto;
+  padding: 1em;
+  position: relative;
+}
+.feature-title {
+  color: #333;
+  font-size: 1.3rem;
+  font-weight: 700;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+.features img {
+  -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+  margin-bottom: 16px;
+}
+
+  /*--- Footer ---*/
+
+.page-footer {
+  background-color: #333;
+  color: #ccc;
+  padding: 60px 0 30px;
+  text-align: left;
+}
+.footer-copyright {
+  color: #555;
+  padding: 40px 0;
+}
 
   /*--- Contact form ---*/
 
@@ -503,20 +401,7 @@ h1, h2, h3, h4 {
   color: #ffc107;
 }
 
-/*--- Footer ---*/
-
-.page-footer {
-    background-color: #333;
-    color: #ccc;
-    padding: 60px 0 30px;
-    text-align: left;
-  }
-  .footer-copyright {
-    color: #555;
-    padding: 40px 0;
-  }
-
-  /*--- Media queries, Small devices (landscape phones, 576px and up) ---*/
+  /*--- Media queries ---*/
 
   @media (max-width: 575.98px) {
     .description {
@@ -541,3 +426,115 @@ h1, h2, h3, h4 {
     }
   }
 
+  /*--- Media queries ---*/
+  
+  @media (max-width: 450px) {
+    body {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .main {
+      height: 90%;
+    }
+    .information {
+      display: none;
+    }
+    #board {
+      width: 90vw;
+      height: 100%;
+      grid-gap: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    #board .color {
+      width: 100%;
+      height: 120px;
+      border-radius: 0;
+    }
+    #center-board {
+      position: static;
+      width: 100%;
+      border-radius: 0;
+      border: none;
+    }
+    .button {
+      width: 50px;
+      height: 50px;
+      margin-bottom: 5px;
+    }
+    .button-tag p {
+      font-size: 1em;
+    }
+    .splash-logo {
+      width: 90%;
+    }
+    .splash h2 {
+      font-size: 1.5em;
+    }
+    .play-wrap {
+      width: 100%;
+    }
+  }
+  
+  @media (min-width: 451px) and (max-width: 825px) {
+    .information {
+      display: none;
+    }
+    #board {
+      width: 90vw;
+      height: 90vh;
+      grid-gap: 10px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
+    #board .color {
+      width: 100%;
+      height: 100%;
+      border-radius: 0;
+    }
+    #center-board {
+      position: static;
+      width: 100%;
+      height: 100%;
+      border-radius: 0;
+      border: none;
+    }
+    .button {
+      width: 50px;
+      height: 50px;
+      margin-bottom: 5px;
+    }
+    .button-tag p {
+      font-size: 1em;
+    }
+    .splash h2 {
+      margin-top: 30px;
+    }
+    .splash-logo {
+      width: 90%;
+    }
+    .row {
+      width: 70%;
+    }
+    .success {
+      filter: drop-shadow(0 0 100px green);
+    }
+    .failure {
+      filter: drop-shadow(0 0 100px red);
+    }
+  }
+  
+  @media (min-width: 751px) and (max-width: 1000px) {
+    .information {
+      display: none;
+    }
+    .splash-logo {
+      width: 90%;
+    }
+  }
