--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ h2 {
   }
   
   .back {
-    transform: rotateY(180deg);
+    transform: rotateY(179deg);
     background-color: #6589F9;
     background-size: contain;
     background-repeat: no-repeat;
@@ -142,12 +142,13 @@ h2 {
   }
   
   .selected {
-    transform: rotateY(180deg);
+    transform: rotateY(179deg);
   }
   
   .match .front {
     background: #6589F9 !important;
   }
+ 
 
 /*--- Simon game board ---*/
 
@@ -195,7 +196,7 @@ h2 {
 }
 
 #blue {
-  background-color: blue;
+  background-color: #007bff;
   grid-column: 1/2;
   grid-row: 2/3;
   border-radius: 0 0 0 100%;
@@ -221,7 +222,7 @@ h2 {
 .button {
   width: 25px;
   height: 25px;
-  border: solid 2px black;
+  border: solid 2px #000000;
   border-radius: 100%;
   box-shadow: inset 0 0 2px #000000;
   font-size: 3em;
@@ -230,7 +231,7 @@ h2 {
 }
 
 #start {
-  background-color: red;
+  background-color: #dc3545;
 }
 
 .button:active {
@@ -238,7 +239,7 @@ h2 {
 }
 
 #reset {
-  background-color: yellow;
+  background-color: #ffc107;
 }
 
 .button:focus {
@@ -301,7 +302,7 @@ h2 {
 
 .score {
   color: lightgreen;
-  background-color: black;
+  background-color: #000000;
   padding: 5px 5px 5px 10px;
   margin-bottom: 10px;
   font-size: 24px;
@@ -358,17 +359,9 @@ h2 {
   position: relative;
 }
 .feature-title {
-  color: #333;
   font-size: 1.3rem;
   font-weight: 700;
   margin-bottom: 20px;
-  text-transform: uppercase;
-}
-.features img {
-  -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
-  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
-  margin-bottom: 16px;
 }
 
   /*--- Footer ---*/
@@ -381,7 +374,7 @@ h2 {
 }
 .footer-copyright {
   color: #555;
-  padding: 40px 0;
+  padding: 10px 0;
 }
 
   /*--- Contact form ---*/
@@ -429,17 +422,8 @@ h2 {
   /*--- Media queries ---*/
   
   @media (max-width: 450px) {
-    body {
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
     .main {
       height: 90%;
-    }
-    .information {
-      display: none;
     }
     #board {
       width: 90vw;
@@ -469,21 +453,9 @@ h2 {
     .button-tag p {
       font-size: 1em;
     }
-    .splash-logo {
-      width: 90%;
-    }
-    .splash h2 {
-      font-size: 1.5em;
-    }
-    .play-wrap {
-      width: 100%;
-    }
   }
   
   @media (min-width: 451px) and (max-width: 825px) {
-    .information {
-      display: none;
-    }
     #board {
       width: 90vw;
       height: 90vh;
@@ -513,12 +485,6 @@ h2 {
     .button-tag p {
       font-size: 1em;
     }
-    .splash h2 {
-      margin-top: 30px;
-    }
-    .splash-logo {
-      width: 90%;
-    }
     .row {
       width: 70%;
     }
@@ -527,14 +493,5 @@ h2 {
     }
     .failure {
       filter: drop-shadow(0 0 100px red);
-    }
-  }
-  
-  @media (min-width: 751px) and (max-width: 1000px) {
-    .information {
-      display: none;
-    }
-    .splash-logo {
-      width: 90%;
     }
   }
